release 1.2 (03-2010)
- Fixed issue 471
  https://jersey.dev.java.net/issues/show_bug.cgi?id=471
  LoggingFilter should not have side-effects on the response and retain
  content length information.
- Allow injection of the Client instance onto client-managed provider
  classes.
- Fixed issue 475
  https://jersey.dev.java.net/issues/show_bug.cgi?id=475
  A registered application can return null for getClasses and getSingletons
  which has the same meaning as returning an empty set.
- Fixed issue 479
  https://jersey.dev.java.net/issues/show_bug.cgi?id=479
  Fixed package scanning for applications deployed to the WebLogic application
  server.
- Fixed issue 477
  https://jersey.dev.java.net/issues/show_bug.cgi?id=477
  Added null check for value returned from ServletContext.getResourcePaths.
- Jersey Test Framework modularization
  You can choose which container would be used for testing by depending on that
  module. For example if you want to use InMemory container, specify dependency
  like:
        <dependency>
            <groupId>com.sun.jersey.jersey-test-framework</groupId>
            <artifactId>jersey-test-framework-inmemory</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

  and it will be used. When you define multiple dependencies and grizzly module
  (default) is present, tests will run on grizzly; otherwise (grizzly module is
  not present) warning will be produced and tests will run on first discovered
  module. This can be altered by specifying jersey.test.containerFactory property
  and setting its value to TestContainer descendant (fully qualified java class
  name).
- Upgrade from Grizzly 1.9.8 to Grizzly 1.9.18-i
- Fixed issue 465
  https://jersey.dev.java.net/issues/show_bug.cgi?id=465
  Refactored ResourceConfig; now its possible to use delimiters ';', ',' and ' '
  (space) to separate class names in various init parameters like filters and